--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "reqwest": "^2.0.5",
     "styled-components": "^4.2.0"
   },
   "scripts": {
